Use HTTPS for imagej.net URLs

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 		<developer>
 			<id>imagejan</id>
 			<name>Jan Eglinger</name>
-			<url>http://imagej.net/User:Eglinger</url>
+			<url>https://imagej.net/User:Eglinger</url>
 			<roles>
 				<role>founder</role>
 				<role>lead</role>
