--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
 		<dependency>
 			<groupId>net.imagej</groupId>
 			<artifactId>imagej</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
