--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	<inceptionYear>2017</inceptionYear>
 	<organization>
 		<name>My Company</name>
-		<url>http://mycompany.com/</url>
+		<url>https://mycompany.com/</url>
 	</organization>
 	<licenses>
 		<license>
@@ -62,8 +62,8 @@
 
 	<mailingLists>
 		<mailingList>
-			<name>ImageJ Forum</name>
-			<archive>http://forum.imagej.net/</archive>
+			<name>Image.sc Forum</name>
+			<archive>https://forum.image.sc/tags/imagej</archive>
 		</mailingList>
 	</mailingLists>
 
@@ -93,7 +93,7 @@
 	<repositories>
 		<repository>
 			<id>imagej.public</id>
-			<url>http://maven.imagej.net/content/groups/public</url>
+			<url>https://maven.imagej.net/content/groups/public</url>
 		</repository>
 	</repositories>
 
