Switch from Travis CI to GitHub Actions

--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
 		<license.copyrightOwners>My Company, Inc.</license.copyrightOwners>
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
-		<releaseProfiles>deploy-to-scijava</releaseProfiles>
+		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 	</properties>
 
 	<repositories>
